# pybog

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONFIG_JS_FIX_COMPLETE.md  CUserstechProjectspybogbackendservicespybog_agent_v2.py  Dockerfile  ENHANCEMENT_PLAN.md  IMPROVED_FLOW_DEMO.md  INTEGRATION_ISSUES_REPORT.md  INTERFACE_UNIFICATION_COMPLETE.md  LICENSE  MESSAGE_TRANSFORMATION_FIX_COMPLETE.md  N8N_WORKFLOW_FIXES.md  PROJECT_STRUCTURE.md  PYBOG_ANALYSIS.md  README.md  README_EXTENDED.md  SYSTEM_REPAIR_PLAN.md  UPSTREAM_SYNC.md  WARP.md  WORKFLOW_ARCHITECTURE.md  agent.py  agent_fastmcp.py  agent_log_20250820_080215.json  bog_maker.py  database_schema.sql  debug_network.html  diff.patch  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generic_agent.py  main.py  make_all_test_bogs.py  mcp_server.py  mcp_server_fastmcp.py  openapi_current.json  (+21 more)
.claude/: settings.local.json
api/: __init__.py  database.py  docker_monitor.py  health_diagnostics.py  main.py  models.py  n8n_integration.py  n8n_resume.py
backend/: .env.example  .env.test  Dockerfile  __init__.py  pytest.ini  requirements.txt
bog_builder/: builder.py  manifest_generator.py
context/: kitControlIntrol.txt  llms-full.txt  llms.txt
context_engineering/: BACKUP_llm_bog_instructions.txt  builder_notes.md  grok_mini_test.py  grok_tstat_test.py  llm_bog_instructions.txt  llm_bog_instructions_old.txt  llm_bog_instructions_token_optimized.txt  make_text_file.py  make_text_file_optimzied.py
docker/: Dockerfile  docker-compose.yml
(+404 files in other folders)
