[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bog_builder"
version = "0.1.1"
description = "Niagara .bog file builder with robust Pydantic validation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "fastapi[all]",
    "google-generativeai",
    "fastmcp"
]

[project.optional-dependencies]
dev = [
    "black",
]